fix alignment of the project title

--- a/docs/style.css
+++ b/docs/style.css
@@ -510,8 +510,15 @@ Projects
 
 .projects_tittle {
     position: relative;
-    text-align: left;
+    text-align: center;
     font-size: 48px;
+    margin-bottom: 60px;
+}
+
+.project_description--tittle{
+    position: relative;
+    text-align: left;
+    font-size: 40px;
     margin-bottom: 60px;
 }
 
